Fixing underling on header on readability home page.

--- a/css/readability-home.css
+++ b/css/readability-home.css
@@ -214,8 +214,11 @@ em {
     }
 
 #articleContent h1 {
-	font-size: 1.2em;
 	display: block;
+	padding-bottom: .5em;
+	margin-bottom: .75em;
+	border-bottom:1px solid #333;
+	font-size: 1.2em;
 	text-transform: capitalize;
     }
 
@@ -238,6 +241,7 @@ em {
 .style-terminal #readInner a { color:#093; }
 /* Begin Typekit Styles */
 .style-apertura { font-family:"apertura-1", "apertura-2", sans-serif; background-color:#2d2828; color:#eae8e9; }
+.style-apertura #articleContent h1 { border-bottom-color: #ededed; }
 .style-apertura #readInner a { color:#58b0ff; }
 .style-athelas { font-family:"athelas-1", "athelas-2", sans-serif; background-color:#f7f7f7; color:#2b373d; }
 .style-athelas #readInner a { color:#1e83cb; }
